feat: buildable v11.0 APK from recovered source + prebuilt native libs
Phase 1 complete: the app builds a working v11.0 APK using Java source
recovered via jadx decompilation and native libraries extracted as prebuilts
from the official v11.0.0 release APK.

Build system:
- AGP 8.2.2, Gradle 8.2, compileSdk 35, targetSdk 34
- Gradle wrapper, settings.gradle, gradle.properties added
- Native CMake build disabled (using prebuilt .so)

Java source (257 files):
- 67 new classes (win32/, renderer/effects/, file manager, Vortek, GLX, etc.)
- 193 classes updated from v7.1 to v11
- 19 classes removed/renamed (Box86→Box64, ImageFs→RootFS, etc.)
- 387 jadx decompilation artifacts fixed
- Git LFS for binary assets (.tzst, .so, .sf2, .jar)

Native libraries (35 prebuilt .so):
- All v11 libraries including new renderers (Vortek, Gladio)
- Hook system (hook_impl, file_redirect, gsl_alloc, main_hook)
- Updated third-party deps (PulseAudio, FluidSynth, GLib, etc.)

Assets (68 files):
- rootfs.tzst (62MB) — Wine 10.10 + glibc Linux rootfs
- Updated Box64 0.4.0, DXVK 2.4.1, Turnip 26.1.0
- New Vortek/Gladio renderer packages, soundfont, wallpapers

Resources:
- 26 new layouts, 20 updated, 4 removed
- Updated strings (322 entries), styles (dark/light themes), attrs
- Filtered to Winlator-owned resources only (library res from AARs)